# summarize_from_feedback_details

./: .gitignore  LICENSE  Makefile  README.md  benchmark.sbatch  calibration.ipynb  deepspeed1.yaml  deepspeed_1gpu.yaml  deepspeed_4gpu_fp16.yaml  dpo.sh  dpo_lora.sh  hello_lora.sh  hello_world.sh  load_trained.py  lora_test.sh  pyproject.toml  r.sbatch  release_runs.csv  requirements.txt  scalar_model_to_hf.py  vis_tokens_latex.py  visualize_tokens.py
eval/: analyze_eos.py  analyze_rm.py  calibration.py  d.py  generate_checkpoint_table.py  gpt4.sh  match.py  oai.py  oai1b.csv  oai1b.csv_judged.csv  oai2.py  oai2_pref_dataset.py  oai3.py  oai_converter.py  rlhf_log.py  rlhf_log1.py  rlhf_log_length.py  rlhf_scale.py  rlhf_scale_vs_sft.py  rlhf_scaling_plot.py  rm_eval_calibration.py  rm_sft_scale.py  sft_rm_scale.py
new/: ppo_left_padding.py  reward.py  sft.py
reference_output/: dpo.txt  dpo1.txt  ppo.txt  ppo1.txt  reward.txt  reward1.txt  sft.txt  sft1.txt
sbatches/: dpo.sbatch  dpo_0.5.sbatch  dpo_eos.sbatch  dpo_onpolicy.sbatch  ppo.sbatch  ppo1.4b.sbatch  ppo_6b.sbatch  ppo_6b_lora.sbatch  ppo_left_padding.sbatch  ppo_left_padding6b.sbatch  ppo_left_padding6b_new.sbatch  ppo_left_padding_128.sbatch  ppo_left_padding_1286b.sbatch  ppo_left_padding_kl_0.07.sbatch  ppo_left_padding_kl_0.07_6b.sbatch  ppo_left_padding_new.sbatch  ppo_left_padding_new1_kl_0.07.sbatch  ppo_left_padding_new_kl_0.07.sbatch  ppo_left_padding_new_kl_0.07_6b.sbatch  ppo_left_padding_nowhiten_reward.sbatch  ppo_lora.sbatch  reward.sbatch  reward1.4b.sbatch  reward_eval.sbatch  sft.sbatch  sft1.4b.sbatch
summarize_from_feedback_details/: dpo.py  dpo_eos.py  dpo_lora.py  ppo.py  ppo_left_padding.py  ppo_left_padding_new.py  ppo_left_padding_new_lora.py  ppo_lora.py  reward.py  sft.py  tldr_dataset.py  tldr_dataset_latex.py  trainer.py
zephyr/: ppo_left_padding.py  ppo_left_padding_extra.py  reward.py  sft.py  ultradataset.py
